[gd_scene load_steps=11 format=3 uid="uid://byqt3o8t6ejmd"]

[ext_resource type="Script" uid="uid://bd31kysywbtdy" path="res://Scripts/controllers/game.gd" id="1_i6g32"]
[ext_resource type="PackedScene" uid="uid://cqvt2jntmv0mp" path="res://Scenes/player.tscn" id="3_3dryh"]
[ext_resource type="Shader" uid="uid://dnbqg17t5hjkv" path="res://Shaders/blur_shader.gdshader" id="4_3dryh"]
[ext_resource type="PackedScene" uid="uid://dktfykctscno7" path="res://Scenes/ghost.tscn" id="4_wowpa"]
[ext_resource type="Texture2D" uid="uid://bo13u82qu2m5r" path="res://Sprites/circle.png" id="5_i6g32"]
[ext_resource type="Texture2D" uid="uid://buvaojy7biqdt" path="res://Sprites/Samurai_Spritesheet.png" id="5_wowpa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wowpa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1l0tm"]
bg_color = Color(1, 0.53333336, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6g32"]
bg_color = Color(1, 0.972549, 0.9411765, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wowpa"]
shader = ExtResource("4_3dryh")
shader_parameter/strength = 0.0

[node name="Game" type="Node2D"]
script = ExtResource("1_i6g32")

[node name="SamuraiSpritesheet" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.2, 0.03529412, 0.050980393, 1)
position = Vector2(-2078, 574)
scale = Vector2(4.746774, 4.746774)
texture = ExtResource("5_wowpa")

[node name="game_container" type="SubViewportContainer" parent="."]
offset_right = 1280.0
offset_bottom = 1080.0

[node name="game_window" type="SubViewport" parent="game_container"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(1280, 1080)
render_target_update_mode = 4

[node name="cream_background" type="ColorRect" parent="game_container/game_window"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -540.0
offset_right = 640.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.972549, 0.9411765, 1)

[node name="BodyPlayer" parent="game_container/game_window" instance=ExtResource("3_3dryh")]
position = Vector2(220, 471)

[node name="BodyEnemy" parent="game_container/game_window" instance=ExtResource("4_wowpa")]
position = Vector2(796, 318)

[node name="BodyEnemy2" parent="game_container/game_window" instance=ExtResource("4_wowpa")]
position = Vector2(942, 642)

[node name="BodyEnemy3" parent="game_container/game_window" instance=ExtResource("4_wowpa")]
position = Vector2(513, 728)

[node name="BodyEnemy4" parent="game_container/game_window" instance=ExtResource("4_wowpa")]
position = Vector2(87, 318)

[node name="BodyEnemy5" parent="game_container/game_window" instance=ExtResource("4_wowpa")]
position = Vector2(1202, 959)

[node name="HUD_TOP" type="ColorRect" parent="game_container/game_window"]
offset_right = 1280.0
offset_bottom = 98.66667
scale = Vector2(1.5, 1.5)
color = Color(0.2, 0.03529412, 0.050980393, 1)

[node name="character_info_1" type="Node2D" parent="game_container/game_window/HUD_TOP"]
position = Vector2(112, 41.333336)

[node name="layout_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_1"]
visible = false
offset_left = -112.0
offset_top = -41.333336
offset_right = 64.0
offset_bottom = -14.333336
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_1l0tm")
value = 100.0
show_percentage = false

[node name="name_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_1"]
offset_left = -104.0
offset_top = -41.333
offset_right = 72.000015
offset_bottom = -14.333
text = "SAMURAI"
vertical_alignment = 1

[node name="level_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_1"]
offset_left = -111.99999
offset_top = -41.333
offset_right = 64.00001
offset_bottom = -14.333
text = "LVL 21"
horizontal_alignment = 2
vertical_alignment = 1

[node name="life_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_1"]
offset_left = -64.0
offset_top = -11.333336
offset_right = 64.0
offset_bottom = 15.666664
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_i6g32")
value = 35.86
show_percentage = false

[node name="life_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_1"]
offset_left = -104.0
offset_top = -11.333336
offset_right = 72.0
offset_bottom = 15.666664
text = "LIFE"
vertical_alignment = 1

[node name="xp_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_1"]
offset_left = -64.0
offset_top = 20.666664
offset_right = 64.0
offset_bottom = 47.666664
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_i6g32")
value = 51.97
show_percentage = false

[node name="xp_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_1"]
offset_left = -104.0
offset_top = 20.666664
offset_right = 72.0
offset_bottom = 47.666664
text = "XP"
vertical_alignment = 1

[node name="character_info_2" type="Node2D" parent="game_container/game_window/HUD_TOP"]
position = Vector2(302, 41.333)

[node name="layout_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_2"]
visible = false
offset_left = -112.0
offset_top = -41.333336
offset_right = 64.0
offset_bottom = -14.333336
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_1l0tm")
value = 100.0
show_percentage = false

[node name="name_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_2"]
offset_left = -104.0
offset_top = -41.333
offset_right = 72.000015
offset_bottom = -14.333
text = "SAMURAI"
vertical_alignment = 1

[node name="level_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_2"]
offset_left = -111.99999
offset_top = -41.333
offset_right = 64.00001
offset_bottom = -14.333
text = "LVL 21"
horizontal_alignment = 2
vertical_alignment = 1

[node name="life_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_2"]
offset_left = -64.0
offset_top = -11.333336
offset_right = 64.0
offset_bottom = 15.666664
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_i6g32")
value = 35.86
show_percentage = false

[node name="life_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_2"]
offset_left = -104.0
offset_top = -11.333336
offset_right = 72.0
offset_bottom = 15.666664
text = "LIFE"
vertical_alignment = 1

[node name="xp_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_2"]
offset_left = -64.0
offset_top = 20.666664
offset_right = 64.0
offset_bottom = 47.666664
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_i6g32")
value = 51.97
show_percentage = false

[node name="xp_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_2"]
offset_left = -104.0
offset_top = 20.666664
offset_right = 72.0
offset_bottom = 47.666664
text = "XP"
vertical_alignment = 1

[node name="character_info_3" type="Node2D" parent="game_container/game_window/HUD_TOP"]
position = Vector2(492, 41.333)

[node name="layout_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_3"]
visible = false
offset_left = -112.0
offset_top = -41.333336
offset_right = 64.0
offset_bottom = -14.333336
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_1l0tm")
value = 100.0
show_percentage = false

[node name="name_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_3"]
offset_left = -104.0
offset_top = -41.333
offset_right = 72.000015
offset_bottom = -14.333
text = "SAMURAI"
vertical_alignment = 1

[node name="level_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_3"]
offset_left = -111.99999
offset_top = -41.333
offset_right = 64.00001
offset_bottom = -14.333
text = "LVL 21"
horizontal_alignment = 2
vertical_alignment = 1

[node name="life_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_3"]
offset_left = -64.0
offset_top = -11.333336
offset_right = 64.0
offset_bottom = 15.666664
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_i6g32")
value = 35.86
show_percentage = false

[node name="life_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_3"]
offset_left = -104.0
offset_top = -11.333336
offset_right = 72.0
offset_bottom = 15.666664
text = "LIFE"
vertical_alignment = 1

[node name="xp_bar" type="ProgressBar" parent="game_container/game_window/HUD_TOP/character_info_3"]
offset_left = -64.0
offset_top = 20.666664
offset_right = 64.0
offset_bottom = 47.666664
theme_override_styles/background = SubResource("StyleBoxEmpty_wowpa")
theme_override_styles/fill = SubResource("StyleBoxFlat_i6g32")
value = 51.97
show_percentage = false

[node name="xp_label" type="Label" parent="game_container/game_window/HUD_TOP/character_info_3"]
offset_left = -104.0
offset_top = 20.666664
offset_right = 72.0
offset_bottom = 47.666664
text = "XP"
vertical_alignment = 1

[node name="_division" type="ColorRect" parent="game_container/game_window/HUD_TOP"]
layout_mode = 0
offset_left = 594.667
offset_top = 15.0
offset_right = 595.667
offset_bottom = 83.667
color = Color(1, 0.972549, 0.9411765, 1)

[node name="souls_label" type="Label" parent="game_container/game_window/HUD_TOP"]
layout_mode = 0
offset_left = 595.99994
offset_right = 793.9487
offset_bottom = 23.0
scale = Vector2(1.3, 1.3)
text = "BIG SOULS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="big_souls_container" type="Node2D" parent="game_container/game_window/HUD_TOP/souls_label"]
position = Vector2(95.384674, 48.717953)
scale = Vector2(0.71, 0.71)

[node name="big_soul" type="Node2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container"]
position = Vector2(-73.333374, -16)
scale = Vector2(1.7650001, 1.7650001)

[node name="bigSoul_border" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul"]
texture_filter = 2
scale = Vector2(0.038, 0.038)
texture = ExtResource("5_i6g32")

[node name="bigSoul_background" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul"]
modulate = Color(0.2, 0.03529412, 0.050980393, 1)
texture_filter = 2
scale = Vector2(0.035000004, 0.035000004)
texture = ExtResource("5_i6g32")

[node name="big_soul2" type="Node2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container"]
position = Vector2(0, -16)
scale = Vector2(1.7650001, 1.7650001)

[node name="bigSoul_border" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul2"]
texture_filter = 2
scale = Vector2(0.038, 0.038)
texture = ExtResource("5_i6g32")

[node name="bigSoul_background" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul2"]
texture_filter = 2
scale = Vector2(0.035000004, 0.035000004)
texture = ExtResource("5_i6g32")

[node name="big_soul3" type="Node2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container"]
position = Vector2(74, -16)
scale = Vector2(1.7650001, 1.7650001)

[node name="bigSoul_border" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul3"]
texture_filter = 2
scale = Vector2(0.038, 0.038)
texture = ExtResource("5_i6g32")

[node name="bigSoul_background" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul3"]
modulate = Color(0.2, 0.03529412, 0.050980393, 1)
texture_filter = 2
scale = Vector2(0.035000004, 0.035000004)
texture = ExtResource("5_i6g32")

[node name="big_soul4" type="Node2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container"]
position = Vector2(38.666626, 15.333328)
scale = Vector2(1.7650001, 1.7650001)

[node name="bigSoul_border" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul4"]
texture_filter = 2
scale = Vector2(0.038, 0.038)
texture = ExtResource("5_i6g32")

[node name="bigSoul_background" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul4"]
texture_filter = 2
scale = Vector2(0.035000004, 0.035000004)
texture = ExtResource("5_i6g32")

[node name="big_soul5" type="Node2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container"]
position = Vector2(-39.333374, 15.333336)
scale = Vector2(1.7650001, 1.7650001)

[node name="bigSoul_border" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul5"]
texture_filter = 2
scale = Vector2(0.038, 0.038)
texture = ExtResource("5_i6g32")

[node name="bigSoul_background" type="Sprite2D" parent="game_container/game_window/HUD_TOP/souls_label/big_souls_container/big_soul5"]
modulate = Color(0.2, 0.03529412, 0.050980393, 1)
texture_filter = 2
scale = Vector2(0.035000004, 0.035000004)
texture = ExtResource("5_i6g32")

[node name="blur_graphics" type="CanvasLayer" parent="game_container/game_window"]

[node name="shader_rect" type="ColorRect" parent="game_container/game_window/blur_graphics"]
unique_name_in_owner = true
process_mode = 3
material = SubResource("ShaderMaterial_wowpa")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="battle_container" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = 190.0
offset_right = 1140.0
offset_bottom = 890.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="battle_window" type="SubViewport" parent="battle_container"]
process_mode = 3
handle_input_locally = false
size = Vector2i(1000, 700)
render_target_update_mode = 0

[node name="battle_borders" type="ColorRect" parent="battle_container/battle_window"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -350.0
offset_right = 500.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.2, 0.03529412, 0.050980393, 1)

[node name="battle_background" type="ColorRect" parent="battle_container/battle_window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.972549, 0.9411765, 1)
